--- a/Code/PerceptronLocalService/PerceptronLocalService/App.config
+++ b/Code/PerceptronLocalService/PerceptronLocalService/App.config
@@ -24,9 +24,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ProteinConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-II;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="EcoliConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-II;Initial Catalog=Ecoli;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=CHIRAGH-II;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="ProteinConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=******;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="EcoliConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Ecoli;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
     <!--FARHAN's TESTING -->
     
     <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-II;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
