--- a/Code/PerceptronLocalService/PerceptronLocalService/App.config
+++ b/Code/PerceptronLocalService/PerceptronLocalService/App.config
@@ -29,7 +29,7 @@
     <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
     <!--FARHAN's TESTING -->
     
-    <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-II;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+   <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CHIRAGH-II;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
