--- a/Code/PerceptronAPI/PerceptronAPI/Web.config
+++ b/Code/PerceptronAPI/PerceptronAPI/Web.config
@@ -81,6 +81,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+ <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=*****;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
