--- a/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
+++ b/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -133,6 +134,7 @@
     </Compile>
     <Compile Include="Interfaces\IDataAccessLayer.cs" />
     <Compile Include="Models\CustomMultipartFormDataStreamProvider.cs" />
+    <Compile Include="Models\DetailedProteinHitView.cs" />
     <Compile Include="Models\DetailedResults.cs" />
     <Compile Include="Models\ExecutionTime.cs">
       <DependentUpon>PerceptronDatabase.tt</DependentUpon>
@@ -193,6 +195,9 @@
     <Compile Include="Models\Sites.cs" />
     <Compile Include="Models\stat.cs" />
     <Compile Include="Models\SummaryResults.cs" />
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TermMod.cs" />
     <Compile Include="Models\test.cs" />
     <Compile Include="Models\UserDetails.cs" />
@@ -203,6 +208,10 @@
     <Compile Include="ServiceLayer\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\Search.cs" />
+    <Compile Include="Utility\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Utility\Form1.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -232,6 +241,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Utility\Form1.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
