--- a/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
+++ b/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
@@ -17,7 +17,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="20480" />   <!-- maxRequestLength measured in kilobytes & here its ~20MB Used for Limiting Uploading File Size-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -30,8 +30,17 @@
     </pages>
 
     <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-II;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
+    
   </system.web>
   <system.webServer>
+
+    <!--Uploading File Size-->
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="20971520" />     <!-- maxAllowedContentLength measured in bytes & here its ~20MB Used for Limiting Uploading File Size-->
+      </requestFiltering>
+    </security>
+    
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -81,12 +90,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-
-    <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-II;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
-    <add name="PerceptronSessionInfoEntities" connectionString="metadata=res://*/Models.PerceptronSessionInfo.csdl|res://*/Models.PerceptronSessionInfo.ssdl|res://*/Models.PerceptronSessionInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CHIRAGH-II;initial catalog=PerceptronSessionInfo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
-  </connectionStrings>
+    
+<add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-ii;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
