--- a/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
+++ b/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
@@ -195,9 +195,6 @@
     <Compile Include="Models\Sites.cs" />
     <Compile Include="Models\stat.cs" />
     <Compile Include="Models\SummaryResults.cs" />
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\TermMod.cs" />
     <Compile Include="Models\test.cs" />
     <Compile Include="Models\UserDetails.cs" />
@@ -208,10 +205,10 @@
     <Compile Include="ServiceLayer\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\Search.cs" />
-    <Compile Include="Utility\Form1.cs">
+    <Compile Include="ResultVisualizations\DetailedProteinView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Utility\Form1.Designer.cs" />
+    <Compile Include="ResultVisualizations\DetailedProteinView.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -243,7 +240,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Utility\Form1.resx" />
+    <EmbeddedResource Include="ResultVisualizations\DetailedProteinView.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
