--- a/Code/PerceptronAPI/PerceptronAPI/Web.config
+++ b/Code/PerceptronAPI/PerceptronAPI/Web.config
@@ -17,7 +17,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
+    <!-- maxRequestLength measured in kilobytes & here its ~20MB Used for Limiting Uploading File Size-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -28,10 +29,16 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-
     <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-II;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
   </system.web>
   <system.webServer>
+    <!--Uploading File Size-->
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="20971520" />
+        <!-- maxAllowedContentLength measured in bytes & here its ~20MB Used for Limiting Uploading File Size-->
+      </requestFiltering>
+    </security>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -89,7 +96,4 @@
       </customHeaders>
     </httpProtocol>
   </system.webServer>
-
-
-
 </configuration>
