--- a/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
+++ b/Code/PerceptronAPI/PerceptronAPI/PerceptronAPI.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -133,14 +134,19 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IDataAccessLayer.cs" />
+    <Compile Include="Models\AssembleInsilicoSpectra.cs" />
     <Compile Include="Models\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="Models\DetailedProteinHitView.cs" />
     <Compile Include="Models\DetailedResults.cs" />
     <Compile Include="Models\ExecutionTime.cs">
       <DependentUpon>PerceptronDatabase.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\InsilicoMassSiteFragIon.cs" />
     <Compile Include="Models\InsilicoObj.cs" />
     <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\PeakListData.cs">
+      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\PerceptronDatabase.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -202,6 +208,10 @@
     <Compile Include="Repository\SqlDatabase.cs" />
     <Compile Include="Repository\MySqlDatabase.cs" />
     <Compile Include="RequireHttpsAttribute.cs" />
+    <Compile Include="ResultVisualizations\GraphForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResultVisualizations\GraphForm.Designer.cs" />
     <Compile Include="ServiceLayer\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\Search.cs" />
@@ -241,6 +251,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ResultVisualizations\DetailedProteinView.resx" />
+    <EmbeddedResource Include="ResultVisualizations\GraphForm.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
