--- a/Code/PerceptronAPI/PerceptronAPI/Web.config
+++ b/Code/PerceptronAPI/PerceptronAPI/Web.config
@@ -17,8 +17,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
-    <!-- maxRequestLength measured in kilobytes & here its ~20MB Used for Limiting Uploading File Size-->
+    <httpRuntime targetFramework="4.5" maxRequestLength="40960 " />
+    <!-- maxRequestLength measured in kilobytes & here its ~40MB Used for Limiting Uploading File Size-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -35,8 +35,8 @@
     <!--Uploading File Size-->
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="20971520" />
-        <!-- maxAllowedContentLength measured in bytes & here its ~20MB Used for Limiting Uploading File Size-->
+        <requestLimits maxAllowedContentLength="41943040" />
+        <!-- maxAllowedContentLength measured in bytes & here its ~40MB Used for Limiting Uploading File Size-->
       </requestFiltering>
     </security>
     <validation validateIntegratedModeConfiguration="false" />
@@ -88,7 +88,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
- <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=*****;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    
+ <add name="PerceptronDatabaseEntities" connectionString="metadata=res://*/Models.PerceptronDatabase.csdl|res://*/Models.PerceptronDatabase.ssdl|res://*/Models.PerceptronDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Chiragh-ii;initial catalog=PerceptronDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
