--- a/Code/PerceptronFrontEnd/package.json
+++ b/Code/PerceptronFrontEnd/package.json
@@ -27,6 +27,7 @@
     "angular2-flash-messages": "^3.0.1",
     "angularfire2": "^5.0.0-rc.3",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^2.4.1",
     "file-saver": "^2.0.2",
     "firebase": "^4.6.0",
