--- a/Code/PerceptronAPI/PerceptronAPI/Web.config
+++ b/Code/PerceptronAPI/PerceptronAPI/Web.config
@@ -15,8 +15,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.5" maxRequestLength="40960 " />
     <!-- maxRequestLength measured in kilobytes & here its ~40MB Used for Limiting Uploading File Size-->
     <pages>
