--- a/Code/PerceptronLocalService/PerceptronLocalService/App.config
+++ b/Code/PerceptronLocalService/PerceptronLocalService/App.config
@@ -24,8 +24,16 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ProteinConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
+
     <add name="EcoliConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Ecoli;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="EcoliDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=EcoliDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
+    
+    
+    <add name="HumanConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=Human;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="HumanDecoyConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=HumanDecoy;Integrated Security=True;MultipleActiveResultSets=True" />
+    
+    
+    
     <add name="TrEMBLConnectionStringName" providerName="System.Data.SqlClient" connectionString="Data Source=*****;Initial Catalog=TrEMBL;Integrated Security=True;MultipleActiveResultSets=True" />
     <!--FARHAN's TESTING -->
     
