--- a/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
+++ b/Code/PerceptronAPI/PerceptronAPI/bin/PerceptronAPI.dll.config
@@ -15,9 +15,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="20480" />   <!-- maxRequestLength measured in kilobytes & here its ~20MB Used for Limiting Uploading File Size-->
+    <compilation debug="true" targetFramework="4.8" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="40960 " />
+    <!-- maxRequestLength measured in kilobytes & here its ~40MB Used for Limiting Uploading File Size-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -28,19 +37,16 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-
     <!--<sessionState mode="SQLServer" sqlConnectionString=" Integrated Security=SSPI;data source=CHIRAGH-II;" cookieless="UseCookies" cookieName="ASP.NET_SessionId"  regenerateExpiredSessionId="true" timeout="20"/>-->
-    
   </system.web>
   <system.webServer>
-
     <!--Uploading File Size-->
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="20971520" />     <!-- maxAllowedContentLength measured in bytes & here its ~20MB Used for Limiting Uploading File Size-->
+        <requestLimits maxAllowedContentLength="41943040" />
+        <!-- maxAllowedContentLength measured in bytes & here its ~40MB Used for Limiting Uploading File Size-->
       </requestFiltering>
     </security>
-    
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -99,7 +105,4 @@
       </customHeaders>
     </httpProtocol>
   </system.webServer>
-
-
-
 </configuration>
