--- a/Code/PerceptronLocalService/PerceptronLocalService/PerceptronLocalService.csproj
+++ b/Code/PerceptronLocalService/PerceptronLocalService/PerceptronLocalService.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PerceptronLocalService</RootNamespace>
     <AssemblyName>PerceptronLocalService</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <TargetFrameworkProfile />
@@ -68,9 +68,21 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cudafy.NET, Version=1.29.5576.13786, Culture=neutral, PublicKeyToken=63a4c9931616906b, processorArchitecture=MSIL">
-      <HintPath>..\packages\CUDAfy.NET.1.29.5576.13786\lib\net40\Cudafy.NET.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Cloo">
+      <HintPath>..\packages\CUDAfy.NET by rapiddev\Cloo.dll</HintPath>
+    </Reference>
+    <Reference Include="CUDA.NET">
+      <HintPath>..\packages\CUDAfy.NET by rapiddev\CUDA.NET.dll</HintPath>
+    </Reference>
+    <Reference Include="Cudafy, Version=1.29.7563.20285, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CUDAfy.NET by rapiddev\Cudafy.dll</HintPath>
+    </Reference>
+    <Reference Include="Cudafy.Host">
+      <HintPath>..\packages\CUDAfy.NET by rapiddev\Cudafy.Host.dll</HintPath>
+    </Reference>
+    <Reference Include="Cudafy.Translator">
+      <HintPath>..\packages\CUDAfy.NET by rapiddev\Cudafy.Translator.dll</HintPath>
     </Reference>
     <Reference Include="Dapper, Version=1.50.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.4\lib\net451\Dapper.dll</HintPath>
@@ -106,6 +118,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Management" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
@@ -122,7 +136,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\BlindPTMDto.cs" />
+    <Compile Include="DTO\BlindPtmInfo.cs" />
+    <Compile Include="DTO\CandidateProteinListsDto.cs" />
     <Compile Include="DTO\ExecutionTimeDto.cs" />
+    <Compile Include="DTO\FalseDiscoveryRateDto.cs" />
     <Compile Include="DTO\InsilicoObjectDto.cs" />
     <Compile Include="DTO\MolecularWeightServiceParametersDto.cs" />
     <Compile Include="DTO\MsPeaksDto.cs" />
@@ -130,6 +148,9 @@
     <Compile Include="DTO\PostTranslationModificationsSiteDto.cs" />
     <Compile Include="DTO\ProteinDto.cs" />
     <Compile Include="DTO\PstTagsDto.cs" />
+    <Compile Include="DTO\PTMDataDto.cs" />
+    <Compile Include="DTO\PTMModificationsInfoDto.cs" />
+    <Compile Include="DTO\ResultsDownloadToBeWrite.cs" />
     <Compile Include="DTO\SearchParametersDto.cs" />
     <Compile Include="DTO\SearchQueryDto.cs" />
     <Compile Include="DTO\SearchResultsDto.cs" />
@@ -137,12 +158,15 @@
     <Compile Include="Engine\Evalue.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Engine\FalseDiscoveryRate.cs" />
+    <Compile Include="Engine\PostTranslationalModificationCpu.cs" />
     <Compile Include="Engine\PSTCpuGpuCombineMethod.cs" />
     <Compile Include="Engine\PSTFilterGPU.cs" />
     <Compile Include="Engine\PSTGeneratorGPU.cs" />
     <Compile Include="Engine\PtmCpu.cs" />
     <Compile Include="Engine\TerminalModificationsCPU.cs" />
     <Compile Include="Engine\TruncationCPU.cs" />
+    <Compile Include="Interfaces\IBlindPTMModule.cs" />
     <Compile Include="Interfaces\ITerminalModifications.cs" />
     <Compile Include="Interfaces\ITruncation.cs" />
     <Compile Include="Models\ExecutionTime.cs">
@@ -181,6 +205,9 @@
     <Compile Include="Models\ResultPtmSite.cs">
       <DependentUpon>PerceptronDatabase.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResultsDownloadable.cs">
+      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SearchFile.cs">
       <DependentUpon>PerceptronDatabase.tt</DependentUpon>
     </Compile>
@@ -193,12 +220,30 @@
     <Compile Include="Models\SearchResult.cs">
       <DependentUpon>PerceptronDatabase.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Test.cs">
+      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ZipResultsDownloadInfo.cs">
+      <DependentUpon>PerceptronDatabase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Utility\Acetylation_CPU.cs" />
+    <Compile Include="Utility\Amidation_CPU.cs" />
     <Compile Include="Utility\AminoAcidInfo.cs" />
     <Compile Include="Utility\Clone.cs" />
-    <Compile Include="Utility\Glycosylation.cs" />
-    <Compile Include="Utility\Hydroxylation.cs" />
-    <Compile Include="Utility\Methylation.cs" />
-    <Compile Include="Utility\Phosphorylation.cs" />
+    <Compile Include="Utility\Combinations.cs" />
+    <Compile Include="Utility\ConvertStringListToDoubleList.cs" />
+    <Compile Include="Utility\Cys_CAM_CPU.cs" />
+    <Compile Include="Utility\Cys_CM_CPU.cs" />
+    <Compile Include="Utility\Cys_PAM_CPU.cs" />
+    <Compile Include="Utility\Cys_PE_CPU.cs" />
+    <Compile Include="Utility\Glycosylation_CPU.cs" />
+    <Compile Include="Utility\Hydroxylation_CPU.cs" />
+    <Compile Include="Utility\Methylation_CPU.cs" />
+    <Compile Include="Utility\ModificationMWShift.cs" />
+    <Compile Include="Utility\MSONE_CPU.cs" />
+    <Compile Include="Utility\MSO_CPU.cs" />
+    <Compile Include="Utility\NoOfPtmModifications.cs" />
+    <Compile Include="Utility\Phosphorylation_CPU.cs" />
     <Compile Include="Utility\ProbabilityOfSequence.cs" />
     <Compile Include="Utility\PtmScoreNormalizer.cs" />
     <Compile Include="Engine\BlindPtmCpu.cs" />
@@ -231,11 +276,8 @@
     <Compile Include="Engine\WholeProteinMassTunerGPU.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Engine\PostTranslationalModificationCpu.cs" />
     <Compile Include="Repository\MySQLDatabase.cs" />
     <Compile Include="Repository\SQLDatabase.cs" />
-    <Compile Include="Utility\Acetylation.cs" />
-    <Compile Include="Utility\Amidation.cs" />
     <Compile Include="Utility\AminoAcids.cs" />
     <Compile Include="Utility\BlindPtmUtility.cs" />
     <Compile Include="Utility\CleavageTypes.cs" />
@@ -243,19 +285,20 @@
     <Compile Include="Utility\Constants.cs" />
     <Compile Include="Utility\CPersistentDictionary.cs" />
     <Compile Include="Utility\MassAdjustment.cs" />
+    <Compile Include="Utility\RemoveMass.cs" />
     <Compile Include="Utility\SpecialIons.cs" />
     <Compile Include="Utility\StringSearch.cs" />
     <Compile Include="Utility\StringSearchResult.cs" />
-    <Compile Include="Utility\Ubiquitination.cs" />
+    <Compile Include="Utility\SwitchTypeOfPTM.cs" />
+    <Compile Include="Utility\TerminalModificationsList.cs" />
+    <Compile Include="Utility\TruncationMessage.cs" />
+    <Compile Include="Utility\Ubiquitination_CPU.cs" />
+    <Compile Include="Utility\WriteResultsFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
-    <None Include="ClassDiagram3.cd" />
-    <None Include="ClassDiagram4.cd" />
     <EntityDeploy Include="Models\PerceptronDatabase.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>PerceptronDatabase.Designer.cs</LastGenOutput>
@@ -503,7 +546,6 @@
     <None Include="Tools\OpenMS\share\TOOLS\EXTERNAL\TPP_RefreshParser.ttd" />
     <None Include="Tools\OpenMS\share\TOOLS\EXTERNAL\WINDOWS\TPP_ProteinProphet.ttd" />
     <None Include="Tools\OpenMS\share\TOOLS\EXTERNAL\XTandemToPercolator.ttd" />
-    <None Include="Tools\place_these_executables_in_same_folder_as_Cudafy.NET.dll_" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Models\PerceptronDatabase.Context.tt">
@@ -516,13 +558,6 @@
       <DependentUpon>PerceptronDatabase.edmx</DependentUpon>
       <LastGenOutput>PerceptronDatabase.cs</LastGenOutput>
     </Content>
-    <Content Include="Readme\CUDA.NET.Readme.txt" />
-    <Content Include="Readme\CUDAfy-License.txt" />
-    <Content Include="Readme\example_source_code.cs.txt" />
-    <Content Include="Readme\ILSpy-license.txt" />
-    <Content Include="Readme\README.txt" />
-    <Content Include="Tools\cudafycl.exe" />
-    <Content Include="Tools\CudafyViewer.exe" />
     <Content Include="Tools\MsDeconvConsole.jar" />
     <Content Include="Tools\OpenMS\FileConverter.exe" />
     <Content Include="Tools\OpenMS\OpenMS.dll" />
